fixed overflow

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -13,12 +13,12 @@
 
 html, body {
   width: 100vw;
-  min-height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 601px) {
   /*desktop*/
   * {
     box-sizing: border-box;
@@ -35,11 +35,13 @@ header {
   font-size: 2em;
   text-align: center;
 }
+
 nav {
   color: var(--nav-text-color);
   background-color: var(--lowlight-color);
   width: 25%;
   max-width: 200px;
+  bottom: 0px;
   height: calc(100vh - 64px);
   float: left;
 }
@@ -48,11 +50,13 @@ main {
   background-color: var(--main-color);
   min-width: 75%;
   width: calc(100% - 200px);
+  min-height: calc(100% - 124px);
   height: calc(100vh - 124px);
   float: left;
   color: var(--main-text-color);
   padding-left: 10%;
   padding-right: 10%;
+  overflow: auto;
 }
 
 main img {
@@ -160,12 +164,13 @@ footer {
     background-color: var(--main-color);
     width: 100%;
     height: 125vw;
+    min-height: 580px;
     float: left;
     color: var(--main-text-color);
     padding-left: 15vw;
     padding-right: 15vw;
     padding-top: 10px;
-
+    overflow: auto;
   }
 
   main img {
